whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"selfsigned-issuer","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"whoami-https","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"whoami.130.246.83.195.nip.io","http":{"paths":[{"backend":{"service":{"name":"whoami-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["whoami.130.246.83.195.nip.io"],"secretNa [...]
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: whoami-https
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.130.246.83.195.nip.io
    http:
      paths:
      - backend:
          service:
            name: whoami-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whoami.130.246.83.195.nip.io
    secretName: whoami-tls-secret
